# streamlit-prototype-projects

./: .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  init_setup.sh  pytest.ini  setup.cfg  test.ipynb
.github/workflows/: .gitkeep  ci.yml
backend/: config.py  logger.py  main.py  utils.py
backend/auth/: config.py  dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  security.py  service.py  utils.py
backend/chat/: chat.py  helpers.py  models.py  router.py  schemas.py  services.py
backend/data/: models.py  router.py  schema.py  services.py
backend/db/: __init__.py  base.py
backend/vector_db/: qdrant.py  schemas.py
frontend/: main.py  streamlit_navigation.py
frontend/pages/: __init__.py  chat_page.py  login_page.py  register_page.py
migrations/: README  env.py
migrations/versions/: 2024_06_11_2302-c14ed54f1fba_create_user_tables.py  2024_06_13_1818-cc14f3d67b38_created_chat_db_tables.py  2024_06_21_1621-a3125cb6ad10_create_table_for_course_data.py
requirements/: base.txt  requirements.txt  requirements_dev.txt
src/: exceptions.py  main.py  test.py
src/auth/: dependencies.py  jwt.py  models.py  router.py  schemas.py  service.py  utils.py
src/chat/: chat.py  models.py  router.py  schemas.py  services.py
src/data/: models.py  router.py  services.py
src/db/: __init__.py  base.py  manage.py  models.py
src/product_data/: models.py  router.py  schema.py  services.py
src/vector_db/: qdrant.py
