[metadata]
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.11

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=1.1.1
    flake8>=6.0.0
    tox>=4.4.6
    black>=23.1.0

[options.package_data]
YOURREPONAME = py.typed

[flake8]
max-line-length = 160
exclude = __init__.py